<resources>
    <string name="app_name">Agenda Digital Escolar</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="saudacao">Projeto destinado ao acompanhamento pedagógico de todos os alunos do IFPA Campus Óbidos</string>
    <string name="carregando">Carregando</string>
    <string name="mens_dialog_carregando">Estamos analisando sua requisição...</string>
    <string name="atividades_de_aula">Atividades de Aula</string>
    <string name="desc_atividades_de_aula">Lista com expecificações de suas atividades</string>
    <string name="relatorio_academico">Relatório Acadêmico</string>
    <string name="desc_relatorio_academico">Lista com todo seu histórico de atividades acadêmicas</string>
    <string name="consultar_notas">Consultar Notas</string>
    <string name="desc_consultar_notas">Consulte suas notas bimestrais</string>
    <string name="consultar_faltas">Consultar Faltas</string>
    <string name="desc_consultar_faltas">Consulte suas faltas bimestrais</string>
    <string name="dummy">dummy</string>
    <string name="action_logoff">Sair</string>
    <string name="area_do_aluno">Área do Aluno</string>
    <string name="login_errado">Login e/ou senha errados</string>
    <string name="ok">ok</string>
    <string name="title_activity_inicial">Inicial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logado_sucesso">Logado com sucesso!</string>
    <string name="home">Home</string>
    <string name="desc_projeto">Facilidade no acesso a informação</string>
    <string name="negativo">Não</string>
    <string name="positivo">Sim</string>
    <string name="mensagens">Mensagens</string>
    <string name="desc_mensagem">Gerecie leituras e envio de mensagens aos pais dos alunos</string>
    <string name="titulo_dash_professor">Área do Professor</string>
    <string name="title_activity_tela_aluno">Área do Aluno</string>
    <string name="title_activity_tela_professor">TelaProfessor</string>
    <string name="title_activity_tela_incial_professor">TelaIncialProfessor</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tela_start_professor">TelaStartProfessor</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_tela_prof">TelaProf</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tarefas">Tarefas</string>
    <string name="title_activity_tela_resp">TelaResp</string>
    <string name="sair">Sair</string>
    <string name="title_ocorrencias">Ocorrências</string>
    <string name="start">Inicial</string>
    <string name="sobre">Sobre</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_tela_pedagogico">TelaPedagogico</string>
    <string name="formacao">Form.</string>
    <string name="logoff">Sair</string>
    <string name="after">Anteriores</string>
    <string name="before">Anteriores</string>
    <string name="atuais">Atuais</string>
    <string name="todas">Todas</string>
    <string name="add_alunos">Adicionar Alunos</string>
    <string name="minha_occ">Minhas Ocorrências</string>
    <string name="occ_arq">Ocorrências Arquivadas</string>
    <string name="edicao_occ">Edição de Ocorrência</string>
    <string name="cad_occ">Cadastro de Ocorrência</string>
    <string name="confirma_arquivar">Tem certeza que deseja arquivar esta ocorrência?</string>
    <string name="atencao">Atenção</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="arquivando_occ">Arquivando Ocorrência...</string>
    <string name="descricao_arquivada">Descrição Arquivada</string>
    <string name="data_occ">DATA DA OCORRÊNCIA</string>
    <string name="alunos">ALUNOS</string>
    <string name="reg_por">REGISTRADO POR</string>
    <string name="ocorrencia_arquivada">Ocorrência Arquivada</string>
    <string name="desc_occ">Descrição da Ocorrência</string>
    <string name="action_reabrir">Reabrir</string>
    <string name="confirma_reabrir">Tem certeza que deseja reabrir esta ocorrência?</string>
    <string name="reabrindo_occ">Reabrindo Ocorrência</string>
    <string name="occ_abertas">Ocorrências Abertas</string>
    <string name="primeiro_acesso">Primeiro acesso</string>
    <string name="conf_senha">Confirme sua senha</string>
    <string name="register">Registrar</string>
    <string name="senhas_n_coicidem">As senhas informadas não coincidem</string>
    <string name="senhas_informe">Informe a sua senha</string>
    <string name="login_informe">Informe o seu login</string>
    <string name="senhas_confirme_informe">Confirme a sua senha</string>
    <string name="title_atenction">Atenção</string>
    <string name="title_sucess">Sucesso</string>
    <string name="reg_usuario">Registrar usuário</string>
    <string name="salvar_minhas_credenciais">Salvar minhas credenciais</string>
    <string name="seu_cpf">Informe seu cpf</string>
    <string name="sua_senha">Informe sua senha</string>
    <string name="mensagem_sem_tarefa">Mas não se preocupe, assim que seus professores cadastrarem nós mostraremos para você.</string>
    <string name="professor">Professor</string>
    <string name="listagem_tarefas">Listagem de Tarefas</string>
    <string name="tarefas_atuais">Tarefas Atuais</string>
    <string name="tarefas_anteriores">Tarefas Anteriores</string>
    <string name="todas_tarefas">Todas as Tarefas</string>
    <string name="aviso_sem_tarefa">Não existem tarefas cadastradas</string>
    <string name="carregando_requisicao">Estamos carregando a sua requisição</string>
    <string name="certeza_sair">Tem certeza que deseja sair?</string>
    <string name="yes">Sim</string>
    <string name="certeza_sair_clear_dados">Tem certeza que deseja sair e apagar seus dados de acesso?\n se você clicar em sim você terá que informar seu login e senha na próxima vez que for usar o aplicativo. </string>
    <string name="consulta_atividades">Consulta de Atividades</string>
    <string name="dados_do_professor">Dados do professor</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="disciplinasdoprofessor">Disciplinas Lecionadas</string>
    <string name="ocdoprofessor">Atividades cadastradas</string>
    <string name="cpf">Cpf</string>
    <string name="identificacao_prof">Identificação do Professor</string>
    <string name="atualizar">Atualizar</string>
    <string name="title_activity_detalhes_aluno">DetalhesAluno</string>
    <string name="identificacao_aluno">Identificação do Aluno</string>
    <string name="curso">Curso:</string>
    <string name="turma">Turma</string>
    <string name="resp">Resp.</string>
    <string name="tarefas">Tarefas do Aluno</string>
    <string name="ocorrencias">Ocorrências do Aluno</string>
    <string name="sem_occ_reg">Sem ocorrências cadastradas</string>
    <string name="um_occ_reg">1 ocorrência registrada</string>
    <string name="occs_cad">Ocorrências cadastradas</string>
    <string name="sem_tar_reg">Sem tarefas registradas</string>
    <string name="um_tar_reg">Uma tarefa registrada</string>
    <string name="tars_cad">tarefas cadastradas</string>
</resources>

