<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search_resp"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/sair"
        android:icon="@drawable/ic_exit_to_app_24dp"
        android:title="@string/sair"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        android:title="@string/configuracoes"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/sobre"
        app:showAsAction="never" />


</menu>
