<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <EditText
                    android:inputType="number|numberDecimal"
                    android:id="@+id/login"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_person_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/seu_cpf"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

                <EditText
                    android:id="@+id/senha"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_lock_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/sua_senha"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"

                    />

                <EditText
                    android:id="@+id/conf_senha"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_lock_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/conf_senha"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    />

                <Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_color"
                    android:drawableLeft="@drawable/ic_input_black_24dp"
                    android:drawablePadding="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/register"
                    android:textColor="#fff" />

            </LinearLayout>
        </LinearLayout>
</LinearLayout>