<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayligth"
    tools:context=".pedagogico.CadastroOcorrencia"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grayligth">


        <TextView
            android:visibility="gone"
            android:id="@+id/desc_arquivada"
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/red"
            android:padding="5dp"
            android:text="@string/ocorrencia_arquivada"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DESCRIÇÃO"/>

        <TextView
            android:textSize="16dp"
            android:textColor="@color/primary_text"
            android:id="@+id/descricao_oc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="5dp"
            />

        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@color/green"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_occ"
            android:layout_marginTop="8dp"/>


        <TextView
            android:textSize="16dp"
            android:textColor="@color/primary_text"
            android:id="@+id/data_oc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="5dp"
            />

        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@color/green"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/alunos"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.narcisogomes.myapplication.util.ListViewPersoN
                android:padding="5dp"
                android:background="#fff"
                android:id="@+id/lista_alunos_oc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                >

            </com.example.narcisogomes.myapplication.util.ListViewPersoN>


        </RelativeLayout>
        <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@color/green"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_por"
            android:layout_marginTop="8dp"/>


        <TextView
            android:textSize="16dp"
            android:textColor="@color/primary_text"
            android:id="@+id/ped_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="5dp"
            />



    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


