<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".pedagogico.DetalhesAluno"
    tools:showIn="@layout/ped_activity_detalhes_aluno">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/colorPrimary"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/identificacao_aluno"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nome"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/nome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/resp"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/responsavel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />
                    </LinearLayout>



                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/colorPrimary"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dados Cadastrais:"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="Matr.: "
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/matricula"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/curso"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/curso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/turma"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/turma"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />
                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/colorPrimary"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/ocorrencias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ocorrencias"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.example.narcisogomes.myapplication.util.ListViewPersoN
                            android:id="@+id/lista_occ"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                        </com.example.narcisogomes.myapplication.util.ListViewPersoN>



                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/colorPrimary"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/tarefas_qtd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tarefas"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.example.narcisogomes.myapplication.util.ListViewPersoN
                            android:id="@+id/lista_tarefas"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                        </com.example.narcisogomes.myapplication.util.ListViewPersoN>



                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>



</android.support.v4.widget.NestedScrollView>